# scribe-tokens

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  script.sh  setup.py
artifacts/results/: compression.csv  oov.csv
output/results/: compression.csv  htg.csv  htr.csv  metrics.csv  oov.csv
output/tables/: conv_htg.tex  conv_htr.tex  htg.tex  htr.tex
scripts/: fake_train.py  main_train.py  parse_iam.py  setup_lambda.sh  train.py  train_parallel.sh  train_tokenisers.py  train_utils.py
scripts/data/: parse_deepwriting.py  parse_iam.py
scripts/eval/: compression.py  eval_utils.py  htg.py  htr.py  main.py  oov.py  utils.py
scripts/plot/: attention.py  compression.py  convergence.py  discretization.py  double_descent.py  htg.py  oov.py  results.py  scribe.py
scripts/preprocess/: parse_deepwriting.py  split_deepwriting.py
scripts/train/: main.py  parallel.sh  tokenisers.py  train.py  utils.py
scripts/utils/: fetch_compute_time.py  fetch_metrics.py  move_best_checkpoint.py
src/: __init__.py  constants.py
src/core/: __init__.py  constants.py
src/data_parsing/: iam.py
src/dataloader/: augmenter.py  create.py  dataset.py  split.py
src/demo/: web_demo.html  web_server.py
src/enhancer/: gen.py  main.py  utils.py
src/experiments/: utils.py
src/ink_repr/: factory.py  id.py  repr.py
src/ink_tokeniser/: factory.py  id.py  merger.py  preprocessor.py  tokeniser.py  tokens.py  trained.py  trainer.py
src/ml_model/: factory.py  factory_old.py  id.py  losses.py  metrics.py  model.py  sampler.py
src/ml_trainer/: batch_processor.py  (+11 more)
(+156 files in other folders)
